# a653rs

./: Cargo.toml  README.md  flake.nix  treefmt.toml
.github/workflows/: doc.yaml  nix.yml
examples/: partition.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/src/apex/: partition.rs
macros/: Cargo.toml
macros/src/: channel.rs  lib.rs  partition.rs
macros/src/generate/: channel.rs  context.rs  mod.rs  partition.rs  process.rs  traits.rs  util.rs
macros/src/generate/apex/: error.rs  mod.rs  partition.rs  time.rs
macros/src/parse/: channel.rs  mod.rs  process.rs  start.rs  util.rs
src/: bindings.rs  lib.rs  prelude.rs
src/apex/: blackboard.rs  buffer.rs  error.rs  event.rs  file_system.rs  interrupt.rs  limits.rs  logbook.rs  memory_block.rs  mod.rs  multicore.rs  mutex.rs  name_service.rs  partition.rs  process.rs  queuing.rs  queuing_list.rs  sampling.rs  sap.rs  schedules.rs  semaphore.rs  sp_data.rs  time.rs  types.rs
tests/: integration_tests.rs  partition.rs
