[package]
name = "a653rs"
version = "0.2.0"
edition = "2021"
authors = ["Sven Friedrich <sven.friedrich@dlr.de>"]
license = "MIT OR Apache-2.0"
keywords = [
  "api",
  "arinc",
  "avionics",
  "embedded",
  "no_std",
]
description = "Aring653 abstraction library for hypervisor independent partition programming"
categories = [
  "aerospace", 
  "api-bindings",
  "embedded",
  "no-std"
]
repository = "https://github.com/DLR-FT/a653rs/"

[features]
default = ["strum", "serde"]
full_doc = []
macros = [ "a653rs_macros" ]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
strum = { version = "0.24", features = ["derive"], default-features = false, optional = true }
a653rs_macros = { version = "0.2.0", path = "macros", optional = true }

[dev-dependencies]
a653rs_macros = { version = "0.2.0", path = "macros" }

[workspace]
members = [ "macros" ]

[package.metadata.cargo-all-features]
# macros is the same feature as apex-rs-macros
denylist = ["a653rs_macros"]
