[package]
name = "a653rs"
version = "0.6.1"
edition = "2021"
authors = ["Sven Friedrich <sven.friedrich@dlr.de>"]
license = "MIT OR Apache-2.0"
keywords = [
  "api",
  "arinc",
  "avionics",
  "embedded",
  "no_std",
]
description = "Arinc653 abstraction library for hypervisor independent partition programming"
categories = [
  "aerospace", 
  "api-bindings",
  "embedded",
  "no-std"
]
repository = "https://github.com/DLR-FT/a653rs/"

[features]
default = ["strum", "serde"]
macros = [ "dep:a653rs_macros" ]
serde = ["dep:serde"]
strum = ["dep:strum"]
bindings = []

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
strum = { version = "0.27", features = ["derive"], default-features = false, optional = true }
a653rs_macros = { version = "0.6.1", path = "macros", optional = true }

[dev-dependencies]
a653rs_macros = { version = "0.6.1", path = "macros" }

[workspace]
members = [ "macros" ]

[[example]]
name = "partition"
required-features = ["bindings"]

[package.metadata.cargo-all-features]
# Only focus on features in [features] block (otherwise we get duplicate features)
skip_optional_dependencies = true

[package.metadata."docs.rs"]
all-features = true
