[package]
name = "apex_rs_macros"
version = "0.1.0"
edition = "2021"
authors = ["Sven Friedrich <sven.friedrich@tu-clausthal.de>"]
license = "MIT OR Apache-2.0"
keywords = ["hal", "arinc653", "apex"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
static_assertions = "1.1"
bytesize = "1.2"
strum = { version = "0.24", features = ["derive"] }
darling = "0.14"
itertools = "0.10"
convert_case = "0.6"
humantime = "2.1"
