[package]
name = "a653rs_macros"
version = "0.3.3"
edition = "2021"
authors = ["Sven Friedrich <sven.friedrich@dlr.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DLR-FT/a653rs/"
description = "Macros implementation for a653rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
static_assertions = "1.1"
bytesize = "1.3"
strum = { version = "0.25", features = ["derive"] }
darling = "0.20"
itertools = "0.12"
convert_case = "0.6"
humantime = "2.1"

[dev-dependencies]
a653rs = { path = ".." }
